--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,15 +14,15 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
-
-    compileSdk 35
-    defaultConfig {
-        minSdk 24
-    }
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
+}
+
+dependencies {
+    implementation project(':FtcRobotController')
 }
